# project_2023

./: README.md
2) vector_and_concurrent_learning/: output_log.txt  output_log_method_c.txt
2) vector_and_concurrent_learning/source/: main.cpp  utils.cpp
3) template learning/: CMake.bat
4) struct_and_namespace_and_more_learning/: CMakeLists.txt  learn_log.txt
4) struct_and_namespace_and_more_learning/source/: utils.cpp
5) build_lib_and_exe_cmake_learning/: run_math_log.txt
5) build_lib_and_exe_cmake_learning/math123/: CMakeLists.txt  utils.h
5) build_lib_and_exe_cmake_learning/run_math/: CMakeLists.txt  main.cpp
BOOST_ASIO/1) asio_asyncronous_operation/: CMakeLists.txt  a.bat  main.cpp  t3.h
BOOST_ASIO/1) multithreaded_asyncronous_operation/: CMakeLists.txt  a.bat  main.cpp  t3.h  t4.h  t5.h
BOOST_ASIO/2) synchronous_tcp_daytime_client_server/: CMakeLists.txt  a.bat  daytime1.h  daytime2.h  main.cpp
Basic_cpp_and_cmake_build_learning/: CMake.bat  CMakeLists.txt  result_log.txt
Basic_cpp_and_cmake_build_learning/header/: ssh_utils.h
Basic_cpp_and_cmake_build_learning/source/: main.cpp
CPP/1) Basic_cpp_and_cmake_build_learning/source/: ssh_utils.cpp
CPP/2) vector_and_concurrent_learning/header/: utils.h
CPP/3) template learning/: CMakeLists.txt  main.cpp  pair.h
CPP/4) struct_and_namespace_and_more_learning/: CMake.bat
CPP/4) struct_and_namespace_and_more_learning/header/: utils.h
CPP/4) struct_and_namespace_and_more_learning/source/: main.cpp
CPP/5) build_lib_and_exe_cmake_learning/: final_run_cmake.bat
CPP/5) build_lib_and_exe_cmake_learning/math123/: run_cmake.bat  utils.cpp
CPP/5) build_lib_and_exe_cmake_learning/run_math/: main.cpp  run_cmake.bat
Habbo/: @AutomationLog.txt  dance.py  get_image.py  walk.py
Habbo Automation/: CONSTANT.py  command_utils.py
PY/1) Habbo Automation/: ReadMe.md  auto_ui.py  main.py  query_time_now.py  web_auto.py
QT/: ReadMe.md
QT/1) GUI to run python script/: 13_qt.pro  mainwindow.cpp  mainwindow.h  pythonscript.cpp  pythonscript.h
QT/1) GUI to run python script/python_source/: python_uiauto.py
QT/2) login_page_custom_titlebar/: CMakeLists.txt  CustomTitlebar.cpp  customtitlebar.h  login.cpp  login.h  mainwindow.cpp  mainwindow.h  page1.cpp  page1.h  page2.cpp  page2.h  styles.qss
vector_and_concurrent_learning/: CMake.bat  CMakeLists.txt  output_log_method_a.txt
vector_and_concurrent_learning/source/: main.cpp
